# geo_features

./: README.md  pyproject.toml
src/geo_features/: __init__.py  edge_feature.py  geodetic_distance.py  least_cost_distance.py  summarise_raster.py
src/geo_features/climate_data_store/: __init__.py  landcover.py  requests.py
src/geo_features/utils/: __init__.py  generate_grid.py  generate_random_lines.py  sample_points.py
src/geography/: __init__.py  find_representative_points.py  geodetic_distance.py  least_cost_distance.py  summarise_raster.py
